# nice-vibes

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_PYPI.md  project_rules.md  pyproject.toml
.windsurf/rules/: rules.md
docs/: README_template.md  nicegui_prompt.md  project_creation_guide.md  prompt_config.yaml
docs/mechanics/: application_structure.md  configuration_deployment.md  container_updates.md  custom_components.md  pages.md  styling.md  threejs_integration.md
nice_vibes/: cli.py
nice_vibes/mcp/: README.md  server.py  test_client.py
output/: nice_prompt.md  nice_prompt_compact.md  nice_prompt_compact_offline.md  nice_prompt_extended.md  nice_prompt_extended_offline.md  nice_prompt_offline.md  nice_vibes.md  nice_vibes_compact.md  nice_vibes_compact_offline.md  nice_vibes_extended.md  nice_vibes_extended_offline.md  nice_vibes_offline.md
samples/: README.md
samples/bouncing_circle/: README.md
samples/dashboard/: README.md  main.py
samples/stock_peers/: README.md  main.py
samples/threejs_tornado/: threejs_scene.py
samples/video_custom_component/: main.py
scripts/: build_master_prompt.py  build_samples_gif.py
tests/: test_mcp_tools.py
