[project]
name = "nice-prompt"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Ikemann",email = "michael.ikemann@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "nicegui (>=3.3.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
